--- a/src/app/components/model-list/model-list.component.html
+++ b/src/app/components/model-list/model-list.component.html
@@ -11,7 +11,7 @@
   <mat-grid-list cols="2" rowHeight="3:1">
     <mat-grid-tile *cdkVirtualFor="let make of models | async">
       <mat-card>
-        <mat-card-content>{{ make.Make_Name }}</mat-card-content>
+        <mat-card-content>{{ make.Model_Name }}</mat-card-content>
       </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
