--- a/src/app/components/make-list/make-list.component.css
+++ b/src/app/components/make-list/make-list.component.css
@@ -1,5 +1,11 @@
-cdk-virtual-scroll-viewport {
+:host {
+    display: flex;
+    flex-direction: column;
     height: 100%;
+}
+
+cdk-virtual-scroll-viewport {
+    flex: 1;
 }
 
 mat-grid-tile {
