--- a/src/app/components/model-list/model-list.component.css
+++ b/src/app/components/model-list/model-list.component.css
@@ -1,7 +1,12 @@
-cdk-virtual-scroll-viewport {
+:host {
+    display: flex;
+    flex-direction: column;
     height: 100%;
 }
 
+cdk-virtual-scroll-viewport {
+    flex: 1;
+}
 mat-grid-tile {
     background-color: lightblue;
 }
